# awesome-notes

./: README.md
docs/: create_reranking_model_in_rag.md  custom_workflow_runner_with_cloud.md  explore_gpu_feature_on_kubernetes.md  francise.md  gpu_arch_and_cuda_programming.md  hosting_model_on_kubernetes.md  how_to_design_api.md  how_to_setup_ut_pipeline.md  loraTrainingConfig.json  parallel_programming.md  sync_repos.md  take_a_look_on_claude3.md  train_your_first_bert.md  train_your_first_lora.md
examples/: .gitignore
examples/CUDA/: LIFE.ipynb
examples/Claude3/Bert/: classification.ipynb
examples/Claude3/autoPE/: autoPE.py  compPE.py  test_results.csv  zero2onePE.py
examples/Claude3/githubPR/: app.py
examples/CompyUI/: demo.py
examples/GPU/CUDA/: RDMA.cpp  test_cuda  test_cuda.cu
examples/GPU/parallel_processing/: pp.py  pp.ts  pp_lock.py
examples/LCEL/: Agent.ipynb  LCEL_sample.ipynb
examples/LoRA/: .sample_env  customSearch.py  requirements.txt
examples/LoRA/downloaded_images/: image_0.txt  image_1.txt  image_2.txt  image_3.txt  image_4.txt  image_5.txt  image_6.txt  image_7.txt  image_8.txt  image_9.txt
examples/LoRA/image-caption-portal/: api.ts  package-lock.json
examples/LoRA/sample_images/: 00005-0-Screenshot 2023-10-20 at 11.20.58.txt  00012-0-Screenshot 2023-10-20 at 11.19.21.txt  00015-0-Screenshot 2023-10-20 at 11.20.36.txt
examples/MAD/my-buttonize-app/: README.md  package-lock.json  package.json
examples/RAG/: rerank.ipynb
examples/RAG/from_scratch/: rag_from_scratch.ipynb
examples/RAG/rag-portal/: package-lock.json  package.json
examples/RUST/: advanced.rs  closures_iterators.rs  concurrency.rs  error_handling.rs  introduction.rs  lifetimes.rs  rust_tutorial_examples.rs  testing.rs  tutorial.md
examples/RUST/rust_tutorial/: Cargo.toml
examples/RUST/rust_tutorial/src/: advanced.rs  basics.rs  closures_iterators.rs  collections.rs  concurrency.rs  error_handling.rs  generics_traits.rs  lifetimes.rs  module_package.rs  ownership.rs  smart_pointers.rs  structs_enums.rs  testing.rs  unsafe_rust.rs
examples/constructor/: .npmignore  .projenrc.ts  API.md  README.md  package-lock.json  package.json
examples/constructor/.projen/: deps.json  tasks.json
examples/constructor/lambda/: index.js
examples/constructor/src/: index.ts  intelli-agent-construct.ts
examples/container/: .gitignore  .npmignore  .projenrc.ts  README.md  cdk.json  package.json  tsconfig.dev.json  tsconfig.json
examples/container/k8s/: README.md  (+2 more)
examples/math/: math.ipynb
examples/network/: cache.md  cacheBehavior.py
examples/parallel_processing/: process_controller.py
examples/txt2txt/: QA.md  README.md
examples/txt2txt/webSearch/: Makefile  README.md  pyproject.toml
examples/txt2txt/webSearch/webSearch/: app.py  combined_code_dump.txt  main.py  proto.ipynb  prototype.ipynb  scapeProto.py
examples/txt2txt/webSearch/webSearch/scripts/: clone_repo.sh  combined_code_dump.txt  dump_contents.sh  revise_code_dump.txt
examples/txt2txt/webSearch/webSearch/templates/: main_page.html  upload_doc.html
examples/ut_pipeline/: Makefile  README.md  pyproject.toml  selenium.py
examples/ut_pipeline/tests/integration_tests/: test_foo_integration.py
examples/ut_pipeline/tests/unit_tests/: test_foo.py
examples/ut_pipeline/ut_sample/: foo.py  messy_code.py
(+110 files in other folders)
